feat: Introduce a telemetry client and revamp the teacher panel with a modern glassmorphism theme, updating related UI components and dependencies.

--- a/public/all-kids.html
+++ b/public/all-kids.html
@@ -199,6 +199,7 @@
                 <li><a href="/child-progress.html" class="navbar-link">Student Progress</a></li>
                 <li><a href="/prizes.html" class="navbar-link">Prizes</a></li>
                 <li><a href="/leaderboard.html" class="navbar-link">Leaders</a></li>
+                <li><a href="/teacher.html" class="navbar-link">Teacher</a></li>
 
                 <li><a href="#" onclick="logout(); return false;" class="navbar-link logout-link">Logout</a></li>
             </ul>
