--- a/public/project.html
+++ b/public/project.html
@@ -756,6 +756,7 @@
                 <li><a href="/child-progress.html" class="navbar-link">Student Progress</a></li>
                 <li><a href="/prizes.html" class="navbar-link">Prizes</a></li>
                 <li><a href="/leaderboard.html" class="navbar-link">Leaders</a></li>
+                <li><a href="/teacher.html" class="navbar-link">Teacher</a></li>
 
             </ul>
 
@@ -1870,7 +1871,7 @@
         });
     </script>
     <script src="mode-indicator.js"></script>
-
+    <script src="telemetry-client.js"></script>
     <script src="mobile-nav.js"></script>
 </body>
 
