--- a/public/child-progress.html
+++ b/public/child-progress.html
@@ -508,6 +508,7 @@
                 <li><a href="/child-progress.html" class="navbar-link active">Student Progress</a></li>
                 <li><a href="/prizes.html" class="navbar-link">Prizes</a></li>
                 <li><a href="/leaderboard.html" class="navbar-link">Leaders</a></li>
+                <li><a href="/teacher.html" class="navbar-link">Teacher</a></li>
 
             </ul>
 
