--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -717,6 +717,7 @@
                 <li><a href="/child-progress.html" class="navbar-link">Student Progress</a></li>
                 <li><a href="/prizes.html" class="navbar-link">Prizes</a></li>
                 <li><a href="/leaderboard.html" class="navbar-link active">Leaders</a></li>
+                <li><a href="/teacher.html" class="navbar-link">Teacher</a></li>
 
             </ul>
 
