Refactor server-side system monitoring for comprehensive metrics and introduce client-side inactivity detection, general application logic, and styling.

--- a/public/connections.html
+++ b/public/connections.html
@@ -319,6 +319,7 @@
             border: 2px solid #EF4444;
         }
     </style>
+    <script src="inactivity.js" defer></script>
 </head>
 
 <body>
