--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -700,6 +700,7 @@
 
         /* Adjust prize section for drawer */
     </style>
+    <script src="inactivity.js" defer></script>
 </head>
 
 <body>
