--- a/public/prizes.html
+++ b/public/prizes.html
@@ -188,6 +188,7 @@
             transform: rotate(-5deg);
         }
     </style>
+    <script src="inactivity.js" defer></script>
 </head>
 
 <body>
