--- a/public/project.html
+++ b/public/project.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="kids-theme.css">
     <link rel="stylesheet" href="mobile.css">
     <link rel="stylesheet" href="navbar.css">
-    <script src="analytics.js"></script> <!-- Analytics Telemetry -->
+    <script src="analytics.js" defer></script> <!-- Analytics Telemetry -->
+    <script src="inactivity.js" defer></script> <!-- Shared Logout Logic -->
     <style>
         /* ========================================
            PROJECT PAGE - MODERN REDESIGN
