--- a/public/test-page.html
+++ b/public/test-page.html
@@ -133,6 +133,7 @@
             text-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
         }
     </style>
+    <script src="inactivity.js" defer></script>
 </head>
 
 <body>
